--- a/app/views/authors/images/_form.html.erb
+++ b/app/views/authors/images/_form.html.erb
@@ -1,13 +1,17 @@
 <%= form_with(model: image, local: true) do |form| %>
   <% if image.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(image.errors.count, "error") %> prohibited this image from being saved:</h2>
+      <div class="card border-dark ">
+        <div class="card-header ">
+      <h4><%= pluralize(image.errors.count, "error") %> prohibited this image from being saved:</h4>
 
       <ul>
         <% image.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
+    </div>
+    </div>
     </div>
   <% end %>
 
