--- a/app/views/authors/images/edit.html.erb
+++ b/app/views/authors/images/edit.html.erb
@@ -3,15 +3,22 @@
 
 
 
-<div class="row col-md-4 ">
+<div class="row col-md-6 ">
 	<div class="card border-dark ">
 		<div class="card-body">
 			<h4 class='card-title'>Editing Image</h4>
 
 <%= render 'form', image: @image %>
+<%= form_for :image do |f| %>
+	<% if @image.published? %>
+		<%= f.submit "Unpublish", class: "btn btn-danger" %>
+	<% else %>
+	    <%= f.submit "Publish", class: "btn btn-success" %>
+	<% end %> 
+	<% end %>   
 
-<%= link_to 'Details', @image %> 
+
+<%= link_to 'Image Details', @image %> 
 			</div>
 		</div>
 	</div>
-</div>
