--- a/app/views/authors/images/edit.html.erb
+++ b/app/views/authors/images/edit.html.erb
@@ -9,11 +9,14 @@
 			<h4 class='card-title'>Editing Image</h4>
 
 <%= render 'form', image: @image %>
-<%= form_for :image do |f| %>
+
+<%= form_for(@image) do |f| %>
 	<% if @image.published? %>
-		<%= f.submit "Unpublish", class: "btn btn-danger" %>
+		<%= f.hidden_field :published, value: "0" %>
+		<%= f.submit  "Unpublish", class: "btn btn-danger btn-block" %>
 	<% else %>
-	    <%= f.submit "Publish", class: "btn btn-success" %>
+		<%= f.hidden_field :published, value: "1" %>
+	    <%= f.submit "Publish", class: "btn btn-success btn-block" %>
 	<% end %> 
 	<% end %>   
 
