--- a/app/views/authors/images/edit.html.erb
+++ b/app/views/authors/images/edit.html.erb
@@ -1,5 +1,5 @@
 
-<%= link_to 'Back', images_path, class: 'btn btn-primary mb-4' %>
+<%= link_to 'Back', images_path, class: 'btn btn-primary pb-1' %>
 
 
 
