--- a/app/views/authors/images/show.html.erb
+++ b/app/views/authors/images/show.html.erb
@@ -1,11 +1,16 @@
 
 
 <p id="notice"><%= notice %></p>
-<%= link_to 'Back', images_path, class: "btn btn-primary pb-2" %> 
+
+<% if current_author.images.include?(@image) %>
+<%= link_to 'Back', images_path, class: "btn btn-primary mb-4" %>
+<% else %>
+<%= link_to 'Back', root_path, class: "btn btn-primary mb-4" %> 
+<% end %>
 
 
-<body class ="pt-2">
-<div class="row col-md-12">
+<body>
+<div class="row col-md-12 tp-2">
 
    <div class="card border-dark">
       <div class="card-header border-dark text-center">
@@ -14,7 +19,7 @@
          </p>
          <p>
             <strong>Author:</strong>
-            <%= current_author.username %>
+            <%= @image.author.username %>
          </p>
       </div>
      
@@ -34,7 +39,9 @@
                <a>No</a>
                <% end %>
             </p>
+            <% if current_author.images.include?(@image) %>
             <%= link_to 'Edit', edit_image_path(@image), class: "btn btn-success mb-2" %> 
+            <% end %>
         </div>
     </div>
     </li>
