--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -33,6 +33,7 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Image Title" aria-label="Search">
       <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    <button class="btn btn-success ml-4"href="/login">Login</button>
   </div>
 </nav>
 
