--- a/app/views/layouts/authors.html.erb
+++ b/app/views/layouts/authors.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shopify</title>
+    <title>ImageRepo</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -27,12 +27,9 @@
         <a class="nav-link" href="/images">Your Images</a>
       </li>
       
-      
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Image Title" aria-label="Search">
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </ul>  
+    <button class="btn btn-success mr-2"href="/login">Logout</button>
+    
   </div>
 </nav>
 
