--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
+
+<div class="text-center">
+  <div class="container-fluid pt-4">
+<h1>Forgot your password?</h1>
+		</div>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="field pt-2">
+    <b><%= f.label :email %><br /></b>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
+  <div class="actions pt-4 pb-4">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
