--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,21 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+<div id="error_explanation">
+   <div class="card border-dark" style="width: 25em;margin:0 auto;">
+      <div class="card-header ">
+         <h3>
+            <%= I18n.t("errors.messages.not_saved",
+               count: resource.errors.count,
+               resource: resource.class.model_name.human.downcase)
+               %>
+         </h3>
+         <ul>
+            <% resource.errors.full_messages.each do |message| %>
+            <div class="container-fluid pt-2">
+               <li><%= message %></li>
+            </div>
+            <% end %>
+      </div>
+   </div>
+</div>
+</ul>
 <% end %>
