--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -9,6 +9,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   </head>
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-3">
@@ -26,23 +33,55 @@
       <li class="nav-item active">
         <a class="nav-link" href="/images">Your Images</a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="/about">About</a>
+      </li>
       
       
     </ul>
 
-    <form class="form-inline my-2 my-lg-0" action="/search">
-      <input class="form-control mr-sm-2" name="q" type="search" placeholder="Image Title" aria-label="Search">
+
+    <form class="form-inline my-2 my-lg-0 mr-4" action="/search">
+      <input class="form-control mr-sm-2 " name="q" type="search" placeholder="Image Title" aria-label="Search">
       <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
+  <% if current_author %>
+  <div class="dropdown mr-5">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <button class="dropdown-item" type="button">Your Account</button>
+    <%= link_to 'Logout', destroy_author_session_path, method: :delete, class: "dropdown-item mr-2" %>
+  </div>
+</div>
+<% else %>
+<div class="dropdown mr-5">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <%= link_to 'Login', 'authors/sign_in', class: "dropdown-item mr-2" %>
+    <%= link_to 'Sign up', 'authors/sign_up', class: "dropdown-item mr-2" %>
+  </div>
+</div>
+
+<% end %>
 </nav>
 
   <body class='bg-light'>
 
-    <div class="container">
+    <div class="container text-center">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
+
+    
+
   </body>
+    
+
+
+
 </html>
