--- a/app/views/layouts/authors.html.erb
+++ b/app/views/layouts/authors.html.erb
@@ -9,9 +9,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  </head>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark mb-3">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+  </head>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
   <a class="navbar-brand mb-0"  >ImageRepo
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +31,22 @@
       <li class="nav-item active">
         <a class="nav-link" href="/images">Your Images</a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+
+
       
     </ul>  
-    <button class="btn btn-success mr-2"href="/login">Logout</button>
+    <div class="dropdown mr-5">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <button class="dropdown-item" type="button">Your Account</button>
+    <%= link_to 'Logout', destroy_author_session_path, method: :delete, class: "dropdown-item mr-2" %>
+  </div>
+</div>
     
   </div>
 </nav>
@@ -40,5 +58,11 @@
       <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
+  
+    
+    
+ 
   </body>
+
+
 </html>
