--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,9 +4,10 @@
 <h1>Forgot your password?</h1>
 		</div>
 
+<div class="text-center">   
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+</div>
   <div class="field pt-2">
     <b><%= f.label :email %><br /></b>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
